# mus-uc-devtools

./: .gitignore  CHROME_MANIFEST_IMPLEMENTATION.md  Cargo.toml  GECKODRIVER_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  PUBLISHING.md  README.md  SCREENSHOT_GUIDE.md  TESTING.md  VITEST_IMPLEMENTATION.md  index.js  jsr.json  mcp-server-package.json  package-lock.json  package.json  vitest.config.js
.cargo/: config.toml
.github/agents/: mus-uc-devtools.agent.md
.github/workflows/: build-wasi.yml  publish-jsr.yml  test.yml  vitest.yml
docs/: chrome-context.md  chrome-manifest.md  jco-integration.md  library-usage.md  mcp-integration.md  mcp-server.md  screenshot.md  testing.md  vitest-example.md  vitest-integration.md  vitest-tests.md  wasm-pack.md
examples/: CHROME_MANIFEST_GUIDE.md  QUICK_START.md  chrome.manifest  chrome_context_usage.md  example.css  screenshot-example.sh
examples/demo/: README.md  chrome.manifest  main.css
examples/demo/components/: buttons.css  tabs.css
examples/demo/themes/: dark-theme.css
examples/jco/: README.md  css-manager-example.mjs  marionette-example.js  marionette-example.mjs
examples/js/: README.md  browser-info.js  list-tabs.js  simple-calc.js  with-args.js
examples/mcp/: README.md  integration-example.js  simple-cli.sh
src/: bundler.rs  chrome-css-manager.rs  chrome_css_manager.rs  chrome_manifest.rs  cli.rs  component.rs  index.d.ts  index.js  lib.rs  main.rs  marionette_client.rs  mcp-cli.js  mcp-server.js  screenshot.rs
tests/: headless-test.js  jco-api-test.mjs  mcp-test.js
tests/vitest/: basic.node.test.js  chrome-browser.chrome.test.js  chrome-context.firefox.test.js  chrome-context.test.js  integration.test.js  userchrome-css.firefox.test.js  userchrome-css.test.js  visual-regression.firefox.test.js  visual-regression.test.js
vitest-pool/: IMPLEMENTATION_SUMMARY.md  MODULE_PROXY_NOTES.md  README.md  TEST_RESULTS.md  chrome-pool.js  firefox-pool.js
wit/: world.wit
