[package]
name = "mus-uc-devtools"
version = "0.1.0"
edition = "2021"

[dependencies]
marionette = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.34"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
base64 = "0.21"
notify = "8.2"

[[bin]]
name = "mus-uc"
path = "src/main.rs"