[package]
name = "mus-uc-devtools"
version = "0.1.0"
edition = "2021"
authors = ["mus-uc-devtools contributors"]
description = "A tool to develop userChrome CSS for Firefox using the Marionette protocol"
license = "MIT"
repository = "https://github.com/f3liz-dev/mus-uc-devtools"
readme = "README.md"
keywords = ["firefox", "userchrome", "css", "marionette", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
marionette = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.34"
tempfile = "3.8"
base64 = "0.21"
notify = "8.2"

[[bin]]
name = "mus-uc"
path = "src/main.rs"