[package]
name = "mus-uc-devtools"
version = "0.1.0"
edition = "2021"
authors = ["mus-uc-devtools contributors"]
description = "A tool to develop userChrome CSS for Firefox using the Marionette protocol"
license = "MIT"
repository = "https://github.com/f3liz-dev/mus-uc-devtools"
readme = "README.md"
keywords = ["firefox", "userchrome", "css", "marionette", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mus_uc_devtools"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
marionette = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.34"
tempfile = "3.8"
base64 = "0.21"
notify = "8.2"
wasm-bindgen = { version = "0.2", optional = true }
wit-bindgen = { version = "0.41", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]
component = ["wit-bindgen"]

[[bin]]
name = "mus-uc"
path = "src/main.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false